<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.story.add.AddStoryFragment">

    <ImageView
        android:id="@+id/iv_add_preview"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:contentDescription="@string/image_preview_add_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_add_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_camera_text_add"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_gallery"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/iv_add_preview"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_preview" />

    <Button
        android:id="@+id/btn_add_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_gallery_add"
        app:layout_constraintEnd_toEndOf="@+id/iv_add_preview"
        app:layout_constraintStart_toEndOf="@+id/btn_add_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_add_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_add_description"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_edt_des_add"
        app:layout_constraintBottom_toTopOf="@+id/cb_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_camera">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_add_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:inputType="textMultiLine"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_text_upload_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <CheckBox
        android:id="@+id/cb_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="Share Story Locations"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_upload"
        app:layout_constraintEnd_toEndOf="@+id/edt_layout_add_description"
        app:layout_constraintStart_toStartOf="@+id/edt_layout_add_description" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/design_default_color_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>