<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signin.SignInFragment">

    <TextView
        android:id="@+id/tv_signin_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:fontFamily="sans-serif-light"
        android:text="@string/title_signin"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.farizhustha.storyapp.view.EmailInputLayout
        android:id="@+id/edt_layout_signin_email"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/edt_layout_signin_password"
        app:layout_constraintEnd_toEndOf="@+id/tv_signin_title"
        app:layout_constraintStart_toStartOf="@+id/tv_signin_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.farizhustha.storyapp.view.PasswordInputLayout
        android:id="@+id/edt_layout_signin_password"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        app:layout_constraintBottom_toTopOf="@+id/btn_signin_login"
        app:layout_constraintEnd_toEndOf="@+id/edt_layout_signin_email"
        app:layout_constraintStart_toStartOf="@+id/edt_layout_signin_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_layout_signin_email" />

    <Button
        android:id="@+id/btn_signin_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:enabled="false"
        android:text="@string/btn_text_login_signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_layout_signin_password"
        app:layout_constraintStart_toStartOf="@+id/edt_layout_signin_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_layout_signin_password"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tv_signin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:alpha="0"
        android:text="@string/text_signin_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_signin_register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btn_signin_login" />

    <TextView
        android:id="@+id/btn_signin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0"
        android:text="@string/register"
        android:textColor="#6750A3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_signin_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_signin_login"
        app:layout_constraintStart_toEndOf="@+id/tv_signin_register" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/design_default_color_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>